--- a/frontend/goeve/android/app/src/main/res/drawable/background_splash.xml
+++ b/frontend/goeve/android/app/src/main/res/drawable/background_splash.xml
@@ -2,10 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@color/splash_color"
+        android:src="@drawable/icon"
         android:paddingTop="120dp"/>
-    <item
-        android:width="200dp"
-        android:height="200dp"
-        android:drawable="@mipmap/ic_splash_screen"
-        android:gravity="center"/>
+
 </layer-list>
