--- a/frontend/goeve/android/app/src/main/res/layout/launch_screen.xml
+++ b/frontend/goeve/android/app/src/main/res/layout/launch_screen.xml
@@ -10,7 +10,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/icon"
-        android:contentDescription="TODO" />
+        android:contentDescription="TODO"
+        android:src="@drawable/icon" />
 
 </LinearLayout>
